# SCHOOLMCP

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  env.example  github1  github1.pub  mcp_instance.py  pyproject.toml  quick.py  requirements copy.txt  requirements.txt  server.py  test_images_mcp.py  test_presentation_mcp.py  test_quiz_mcp.py  test_schedule_lesson_mcp.py  test_wiki_material_mcp.py  test_wiki_mcp.py  testmcp.py  план.md
templates/: quiz_template.html
tools/: aspose_slides_module.py  create_presentation.py  export_quiz.py  get_images.py  get_quiz.py  get_text_from_wiki.py  google_calendar.py  google_slides.py  schedule_lesson.py  utils.py  wiki_get_material.py
