[project]
name = "mcp-servers"
version = "0.1.0"
description = "MCP servers for Images and Quiz"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
include = [
    "mcp_instance.py",
    "server.py",
    "templates/**/*.html",
]

